@@ -1,5 +1,5 @@
 /*
- *    Copyright 2009-2023 the original author or authors.
+ *    Copyright 2009-2025 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -19,8 +19,8 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 import java.io.Reader;
-import java.util.Collections;
 import java.util.HashSet;
+import java.util.Set;
 
 import org.apache.ibatis.BaseDataTest;
 import org.apache.ibatis.executor.loader.ProxyFactory;
@@ -139,7 +139,7 @@ class LazyPropertiesTest {
   void verifyCustomLazyLoadTriggerMethods() {
     Configuration configuration = sqlSessionFactory.getConfiguration();
     configuration.setAggressiveLazyLoading(false);
-    configuration.setLazyLoadTriggerMethods(new HashSet<>(Collections.singleton("trigger")));
+    configuration.setLazyLoadTriggerMethods(new HashSet<>(Set.of("trigger")));
     try (SqlSession sqlSession = sqlSessionFactory.openSession()) {
       Mapper mapper = sqlSession.getMapper(Mapper.class);
       User user = mapper.getUser(1);
@@ -155,16 +155,16 @@ class LazyPropertiesTest {
 
   @Test
   void shouldInvokingSetterInvalidateLazyLoading_Javassist() {
-    shoulInvokingSetterInvalidateLazyLoading(new JavassistProxyFactory());
+    shouldInvokingSetterInvalidateLazyLoading(new JavassistProxyFactory());
   }
 
   @Tag("RequireIllegalAccess")
   @Test
   void shouldInvokingSetterInvalidateLazyLoading_Cglib() {
-    shoulInvokingSetterInvalidateLazyLoading(new CglibProxyFactory());
+    shouldInvokingSetterInvalidateLazyLoading(new CglibProxyFactory());
   }
 
-  private void shoulInvokingSetterInvalidateLazyLoading(ProxyFactory proxyFactory) {
+  private void shouldInvokingSetterInvalidateLazyLoading(ProxyFactory proxyFactory) {
     Configuration config = sqlSessionFactory.getConfiguration();
     config.setProxyFactory(proxyFactory);
     config.setAggressiveLazyLoading(false);
